# mimic-indic

./: .gitmodules  ACKNOWLEDGEMENTS  COPYING  README.md  meson.build
include/: cmu_indic_lang.h
src/: mimic_indic_plugin.c
src/cmu_indic_lang/: cmu_indic_lang.c
src/cmu_indic_lex/: cmu_indic_lex.c
subprojects/: mimic-english.wrap
